--- a/.abf.yml
+++ b/.abf.yml
@@ -1,1 +1,3 @@
 sources:
+  tex-gyre.doc.tar.xz: 0d3d6c4ed1cddfe313f0dc023b6daac515318caf
+  tex-gyre.source.tar.xz: f96442c6ba3ce46ef11f538db1bbcdb5798274d3
