Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-   tex-gyre.doc.tar.xz: 0d3d6c4ed1cddfe313f0dc023b6daac515318caf
-   tex-gyre.tar.xz: c9db260764bea618c034c9c50c5675c3f6b1cf1f
+  tex-gyre.doc.r48058.tar.xz: 0d3d6c4ed1cddfe313f0dc023b6daac515318caf
+  tex-gyre.r48058.tar.xz: c9db260764bea618c034c9c50c5675c3f6b1cf1f
